# relnotify

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: error.rs  lib.rs  notifier.rs  types.rs
tests/: integration_tests.rs
